rename database from camelcase to lowercase

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,1 @@
-[![Build Status](https://travis-ci.org/jamienf/cloudconsole.svg?branch=master)](https://travis-ci.org/jamienf/cloudconsole) [![Code Climate](https://codeclimate.com/github/jamienf/cloudconsole.png)](https://codeclimate.com/github/jamienf/cloudconsole) [![Coverage Status](https://coveralls.io/repos/jamienf/cloudconsole/badge.png)](https://coveralls.io/r/jamienf/cloudconsole)
+[![Build Status](https://travis-ci.org/jamienf/punch_in.svg?branch=master)](https://travis-ci.org/jamienf/punch_in) [![Code Climate](https://codeclimate.com/github/jamienf/punch_in.png)](https://codeclimate.com/github/jamienf/punch_in) [![Coverage Status](https://coveralls.io/repos/jamienf/punch_in/badge.png)](https://coveralls.io/r/jamienf/punch_in)
